# scribe

./: docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  exercises.py  midi.py  pyproject.toml  server.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/public/css/: app.css
frontend/src/: App.vue  main.js
frontend/src/apps/: HomeApp.vue  RhythmApp.vue
frontend/src/components/: AudioPlayer.vue  BPMEntry.vue  ScribeAppButton.vue  ScribeButton.vue  ScribeCard.vue
